2010-06-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Fixed unit test.

2010-06-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Fixed 'Bug 614045 - Types hidden by members are not
	  formatted properly by ambience'.

2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.CSharp/CSharpBindingCompilerManager.cs: Track
	  api changes.

2010-06-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  update line when removing marker.

2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  Fix build.

2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp.Completion/NewOverrideCompletionData.cs:
	  Track API. Fix region offset.

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs: Track
	  API. Include both body regions for properties.

2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs: Track
	  API. Emit regions for members.

	* MonoDevelop.CSharp.Completion/NewOverrideCompletionData.cs:
	  Use body regions to select body or place caret, and to
	  remove generated body when GenerateBody is false.

2010-06-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp.Refactoring/CSharpCodeGenerator.cs: Fix
	  property getter in overrides.

2010-06-04  Lluis Sanchez Gual  <lluis@novell.com>

	* templates/ConsoleProject.xpt.xml: Set the external console
	  flag for console projects.

2010-06-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs: Track
	  API changes.

2010-06-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs:
	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs:
	* MonoDevelop.CSharp.Completion/NewOverrideCompletionData.cs: